--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <h1>备忘录</h1>
         <input class="new-todo"
                autofocus autocomplete="off"
-               placeholder="准备做什么?"
+               placeholder="准备做什么？"
                v-model="newTodo"
-               @keyup.enter="addTodo"
-        >
+               @keyup.enter="addTodo">
     </header>
     <section class="main" v-show="todos.length" v-cloak>
         <input type="checkbox" id="toggle-all" class="toggle-all" v-model="allDone">
+        <label for="toggle-all"></label>
         <ul class="todo-list">
             <li v-for="todo in filteredTodos"
                 :key="todo.id"
@@ -55,145 +55,137 @@
 
 
 <script>
-
-
-    //MVC 的 M model
     let STORAGE_KEY = 'todos-vuejs'
     let todoStorage = {
-        fetch: function () {//取值
+        fetch: function () {
             let todos = JSON.parse(localStorage.getItem(STORAGE_KEY) || "[]")
-            todos.forEach(function (todo, index) {
+            todos.forEach((todo,index)=>{
                 todo.id = index
             })
             todoStorage.uid = todos.length
             return todos
         },
-        save: function (todos) {//保存
-            localStorage.setItem(STORAGE_KEY, JSON.stringify(todos))
+        save: function(todos){
+            localStorage.setItem(STORAGE_KEY,JSON.stringify(todos))
         }
     }
 
-    //visibility 过滤器
     let filters = {
-        all: function (todos) {
+        all: function(todos){
             return todos
         },
-        active: function (todos) {
-            return todos.filter(function (todo) {
-                return !todo.completed
-            })
+        active: function(todos){
+           return todos.filter((todo)=>{
+               return !todo.completed
+           })
         },
-        completed: function (todos) {
-            return todos.filter(function (todo) {
+        completed: function(todos){
+            return todos.filter((todo)=>{
                 return todo.completed
             })
         }
     }
 
     let app = new Vue({
-        data: {
+        data:{
             todos: todoStorage.fetch(),
-            newTodo: '',
-            editedTodo: null,
+            newTodo:'',
+            editedTodo:null,
             visibility: 'all',
         },
         watch: {
-            todos: {//深度监听，本地存储持久化
-                handler: function (todos) {
+            todos:{
+                handler: function(todos){
                     todoStorage.save(todos)
                 },
                 deep: true
             }
         },
-        computed: {
-            filteredTodos: function () {
+        computed:{
+            filteredTodos: function(){
                 return filters[this.visibility](this.todos)
             },
-            remaining: function () {
+            remaining: function(){
                 return filters.active(this.todos).length
             },
             allDone: {
-                get: function () {
+                get: function(){
                     return this.remaining === 0
                 },
-                set: function (value) {
-                    this.todos.forEach(function (todo) {
+                set: function(value){
+                    this.todos.forEach((todo)=>{
                         todo.completed = value
                     })
                 }
             }
         },
-
         filters: {
-            pluralize: function (n) {
-                return n === 1 ? 'item' : 'items'
+            pluralize: function (n){
+                return n ===1?'item':'items'
             }
         },
-
-        methods: {
-            addTodo: function () {//添加备忘条
+        methods:{
+            addTodo: function(){
                 let value = this.newTodo && this.newTodo.trim()
-                if (!value) {
+                if (!value){
                     return
                 }
                 this.todos.push({
                     id: todoStorage.uid++,
                     title: value,
-                    completed: false,
+                    completed: false
                 })
                 this.newTodo = ''
             },
-            removeTodo: function (todo) {//删除备忘条
-                this.todos.splice(this.todos.indexOf(todo), 1)
+            removeTodo: function(todo){
+                this.todos.splice(this.todos.indexOf(todo),1)
             },
-            editTodo: function (todo) {//编辑备忘条
-                this.beforeEditCache = todo.title;//在编辑之前缓存
+            editTodo: function (todo) {
+                this.beforeEditCache = todo.title
                 this.editedTodo = todo
             },
-            doneEdit: function (todo) {//保存修改内容
-                if (!this.editedTodo) {
+            doneEdit: function(todo){//保存修改内容
+                if (!this.editedTodo){
                     return
                 }
                 this.editedTodo = null
                 todo.title = todo.title.trim()
-                if (!todo.title) {
+                if (!todo.title){
                     this.removeTodo(todo)
                 }
             },
-            cancelEdit: function (todo) {//Esc 回到编辑之前的内容
+            cancelEdit: function(todo){
                 this.editedTodo = null
                 todo.title = this.beforeEditCache
             },
-            removeCompleted: function () {//删除已完成的备忘条
+            removeCompleted: function(){
                 this.todos = filters.active(this.todos)
             }
         },
-        directives: {
-            'todo-focus': function (el, binding) {
-                if (binding.value) {
+        directives:{
+            'todo-focus': function(el,binding){
+                if (binding.value){
                     el.focus()
                 }
             }
         }
     })
 
-    function onHashChange() {
-        console.log(window.location.hash)
-        let visibility = window.location.hash.replace(/#\/?/, '')
-        console.log(visibility)
-        if (filters[visibility]) {
+    function onHashChange(){
+        let visibility = window.location.hash.replace(/#\/?/,'')
+        if (filters[visibility]){
             app.visibility = visibility
-        } else {
+        } else{
             window.location.hash = ''
             app.visibility = 'all'
         }
     }
 
-    //监听器，监听hash的改变
-    window.addEventListener('hashchange', onHashChange,{once:true})
+    window.addEventListener('hashchange',onHashChange)
     onHashChange()
 
-    app.$mount('.todoapp')//挂载
+    app.$mount('.todoapp')
+
 </script>
 </body>
 </html>
