--- a/index.html
+++ b/index.html
@@ -53,17 +53,15 @@
     </footer>
 </section>
 
-
 <script>
     let STORAGE_KEY = 'todos-vuejs'
     let todoStorage = {
-        fetch: function () {
+        fetch: function(){
             let todos = JSON.parse(localStorage.getItem(STORAGE_KEY) || "[]")
-            todos.forEach((todo,index)=>{
-                todo.id = index
+            todos.forEach((value,index)=>{
+                value.id = index
             })
             todoStorage.uid = todos.length
-            return todos
         },
         save: function(todos){
             localStorage.setItem(STORAGE_KEY,JSON.stringify(todos))
@@ -75,13 +73,13 @@
             return todos
         },
         active: function(todos){
-           return todos.filter((todo)=>{
-               return !todo.completed
-           })
+            return todos.filter((value)=>{
+                return !value.completed
+            })
         },
         completed: function(todos){
-            return todos.filter((todo)=>{
-                return todo.completed
+            return todos.filter((value)=>{
+                return value.completed
             })
         }
     }
@@ -89,21 +87,21 @@
     let app = new Vue({
         data:{
             todos: todoStorage.fetch(),
-            newTodo:'',
-            editedTodo:null,
-            visibility: 'all',
+            newTodo: '',
+            editedTodo: null,
+            visibility: 'all'
         },
-        watch: {
+        watch:{
             todos:{
                 handler: function(todos){
                     todoStorage.save(todos)
                 },
-                deep: true
+                deep:true
             }
         },
         computed:{
-            filteredTodos: function(){
-                return filters[this.visibility](this.todos)
+            filteredTodos: function () {
+                return filters[visibility](this.todos)
             },
             remaining: function(){
                 return filters.active(this.todos).length
@@ -119,13 +117,13 @@
                 }
             }
         },
-        filters: {
-            pluralize: function (n){
-                return n ===1?'item':'items'
+        filers:{
+            pluralize: function(n){
+                return n===1?'item':'items'
             }
         },
-        methods:{
-            addTodo: function(){
+        method: {
+            addTodo: function () {
                 let value = this.newTodo && this.newTodo.trim()
                 if (!value){
                     return
@@ -140,11 +138,11 @@
             removeTodo: function(todo){
                 this.todos.splice(this.todos.indexOf(todo),1)
             },
-            editTodo: function (todo) {
+            editTodo: function(todo){
                 this.beforeEditCache = todo.title
                 this.editedTodo = todo
             },
-            doneEdit: function(todo){//保存修改内容
+            doneEdit: function(todo){
                 if (!this.editedTodo){
                     return
                 }
@@ -161,30 +159,9 @@
             removeCompleted: function(){
                 this.todos = filters.active(this.todos)
             }
-        },
-        directives:{
-            'todo-focus': function(el,binding){
-                if (binding.value){
-                    el.focus()
-                }
-            }
         }
     })
 
-    function onHashChange(){
-        let visibility = window.location.hash.replace(/#\/?/,'')
-        if (filters[visibility]){
-            app.visibility = visibility
-        } else{
-            window.location.hash = ''
-            app.visibility = 'all'
-        }
-    }
-
-    window.addEventListener('hashchange',onHashChange)
-    onHashChange()
-
-    app.$mount('.todoapp')
 
 </script>
 </body>
